--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#e0a862",
-    "activityBar.background": "#e0a862",
+    "activityBar.activeBackground": "#12d421",
+    "activityBar.background": "#12d421",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#1a8556",
+    "activityBarBadge.background": "#766cf3",
     "activityBarBadge.foreground": "#e7e7e7",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#e0a862",
-    "statusBar.background": "#d89137",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#b87724",
-    "statusBarItem.remoteBackground": "#d89137",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#d89137",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#d8913799",
-    "titleBar.inactiveForeground": "#15202b99"
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#12d421",
+    "statusBar.background": "#0ea51a",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#12d421",
+    "statusBarItem.remoteBackground": "#0ea51a",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#0ea51a",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#0ea51a99",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#d89137"
+  "peacock.color": "#0ea51a"
 }
